# zcash-walletd

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rocket.toml  config.toml  index.html  index.xml  installation.html  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  sample.env  sitemap.xml  usage.html
.github/workflows/: build-docker.yml  build-macos.yaml  build.yaml  gh-pages.yml  release-please.yml  vuepress.yml
assets/: 404.html-CnTrPjzw.js  app-BVjG_rsH.js  architectureDiagram-GXAZU6X5-C_r245EB.js  blockDiagram-HV7WRKX4-DU-8b8fN.js  c4Diagram-S26XAWAN-CZ7lwDl-.js  chunk-44WDCOIT-DUU9TiEe.js  chunk-4KE642ED-CfSm3Wp3.js  chunk-5ZJXQJOJ-C0mijHyY.js  chunk-7VIK3F2G-B8I1_EVT.js  chunk-EJZ3NKMF-DVIj8w9T.js  chunk-FASC7IG4-CZd3jGiy.js  chunk-MBJCTAW2-XLTfD8n1.js  chunk-S3YGE35Q-BZxM3xL_.js  chunk-SQHZINSB-BHrRAZEK.js  chunk-VSLJSFIP-DtFHMkH1.js  chunk-ZN7TASNU-CJBzF3PC.js  chunk-ZZTKAOFA-b5qbvuKM.js  classDiagram-v2-I452LMQG-2QAWEPqj.js  dagre-4KEWV3BN-Co1LcQSg.js  diagram-67HW3K5X-DCrQShYt.js  diagram-6ZJQA7GM-GaUZzBZL.js  diagram-BBIVWCGE-B1lYd9Ux.js  erDiagram-DAYQTJMR-DTqXl3od.js  flowDiagram-7YKJRSJY-CR3NItgV.js  ganttDiagram-5J5FM7L2-HybYvvOy.js  gitGraphDiagram-LJPR7UNW-DMBzyhbO.js  index.html-BCy_GR5w.js  infoDiagram-6WOM7B72-CWYoYB_z.js  installation.html-CaTVewcI.js  journeyDiagram-74NXYP6Y-Q7PZWCrb.js  kanban-definition-6U23TIYA-DAm46JcS.js  katex-RV2QPRKB-DgngxxJo.js  mermaid.esm.min-BIzvqzpE.js  mindmap-definition-75HPFGON-Bs4VSu7V.js  pieDiagram-C2LPN6SB-nLEPYZHa.js  quadrantDiagram-5BXOXB7R-Cpv6xCxr.js  requirementDiagram-CG6N56KZ-lERLTrmc.js  sankeyDiagram-RGKAZ5T4-D7a3q5n8.js  sequenceDiagram-NCT4EGAA-BSTemLc8.js  stateDiagram-3M5G37A4-DrCr6NCp.js  (+6 more)
categories/: index.html  index.xml
docker/: Dockerfile  Dockerfile_dev  build.sh  install-rust.sh
docs/: installation.md  setup-regtest.sh  zcash.conf
docs/.vuepress/: config.js
docs/.vuepress/styles/: index.scss
js/: main.min.fc37d8b0407a46b91d2eb42982a75e9c941c852a0edf59ec04ccca4373c54f9c.js
src/: account.rs  db.rs  main.rs  monitor.rs  network.rs  rpc.rs  scan.rs  scan2.rs  transaction.rs
tags/: index.html  index.xml
test/: package.json  pnpm-lock.yaml
test/test/: wallet.test.js
