[package]
name = "zcash-walletd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.69"
rusqlite = "0.26.1"
anyhow = "1.0.45"
dotenv = "0.15.0"
tiny-bip39 = "0.8"

[dependencies.zcash_client_backend]
git = "https://github.com/zcash/librustzcash.git"
rev = "35023ed8ca2fb1061e78fd740b640d4eefcc5edd"

[dependencies.zcash_primitives]
git = "https://github.com/zcash/librustzcash.git"
rev = "35023ed8ca2fb1061e78fd740b640d4eefcc5edd"

[dependencies.zcash_proofs]
git = "https://github.com/zcash/librustzcash.git"
rev = "35023ed8ca2fb1061e78fd740b640d4eefcc5edd"
