[package]
name = "zcash-walletd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Helpers
anyhow = "1.0.45"
dotenv = "0.15.0"
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.69"
hex = "0.4.3"

# REST / RPC
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
tonic = {version = "0.4.3", features = ["tls", "tls-roots"]}
prost = "0.7"

# Async
tokio = { version = "^1.6", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.7"

# DB
rusqlite = "0.26.1"

# Crypto
tiny-bip39 = "0.8"
bls12_381 = "^0.4.0"
jubjub = "^0.6"
ff = "^0.9"
group = "0.9.0"

[build-dependencies]
tonic-build = "0.4.2"

[dependencies.zcash_client_backend]
git = "https://github.com/zcash/librustzcash.git"
rev = "35023ed8ca2fb1061e78fd740b640d4eefcc5edd"

[dependencies.zcash_primitives]
git = "https://github.com/zcash/librustzcash.git"
rev = "35023ed8ca2fb1061e78fd740b640d4eefcc5edd"

[dependencies.zcash_proofs]
git = "https://github.com/zcash/librustzcash.git"
rev = "35023ed8ca2fb1061e78fd740b640d4eefcc5edd"
