[package]
name = "zcash-walletd"
version = "1.1.4"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Helpers
anyhow = "1.0.45"
dotenv = "0.15.0"
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.69"
hex = "0.4.3"
thiserror = "1.0.30"
env_logger = "0.8.4"
log = "0.4.14"
clap = { version = "3.0.0", features = ["derive"] }

# REST / RPC
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
figment = { version = "0.10", features = [ "json" ] }
tonic = { version = "0.4.3", features = ["tls", "tls-roots"] }
prost = "0.7"
reqwest = { version = "0.11.6", features = ["json"] }

# Async
tokio = { version = "^1.6", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.7"

# DB
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio"]}

# Crypto
tiny-bip39 = "0.8"
bls12_381 = "^0.4.0"
jubjub = "^0.6"
ff = "^0.9"
group = "0.9.0"
orchard = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

sapling-crypto = "0.5.0"
zcash_note_encryption = "0.4.1"
zip32 = "0.2"

[build-dependencies]
tonic-build = "0.4.2"

[dependencies.zcash_keys]
git = "https://github.com/zcash/librustzcash.git"
version = "0.12.0"
features = ["sapling", "orchard"]

[dependencies.zcash_client_backend]
git = "https://github.com/zcash/librustzcash.git"
version = "0.21.0"
#rev = "1518b145f8ee67e144fa8337c7dfd4c8cff899c9"

[dependencies.zcash_protocol]
git = "https://github.com/zcash/librustzcash.git"
version = "0.7"
features = ["local-consensus"]

[dependencies.zcash_address]
git = "https://github.com/zcash/librustzcash.git"
version = "0.10"

[dependencies.zcash_primitives]
git = "https://github.com/zcash/librustzcash.git"
version = "0.26"
#rev = "1518b145f8ee67e144fa8337c7dfd4c8cff899c9"

[dependencies.zcash_proofs]
git = "https://github.com/zcash/librustzcash.git"
version = "0.26"
#rev = "1518b145f8ee67e144fa8337c7dfd4c8cff899c9"

[patch.crates-io]
# orchard = { git = "https://github.com/zcash/orchard.git", rev = "cd3e0901ccac2c630dd7fd03eb496d5030c1bbfe" }
